# gdoc-sync

./: .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml
demo/: demo.tape  draft.md  render.sh  seed-comments.sh
docs/: oauth-setup.md
src/gdoc_sync/: __init__.py  auth.py  cli.py  comments.py  config.py  convert.py  create.py  doctor.py  extras.py  mdutils.py  pull.py  push.py  rainbow.py  services.py  share.py  status.py  style.py  watch.py
tests/: test_auth.py  test_comments.py  test_config.py  test_convert.py  test_mdutils.py
