[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gdoc-sync"
version = "0.2.0"
description = "Sync Markdown files with Google Docs — create, push, pull, comment round-trip, and opinionated styling from the CLI"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Matthew Handzel" }]
requires-python = ">=3.10"
keywords = ["google-docs", "markdown", "sync", "cli", "pandoc", "criticmarkup"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
gdoc-sync = "gdoc_sync.cli:main"

[project.urls]
Homepage = "https://github.com/MattHandzel/gdoc-sync"
Issues = "https://github.com/MattHandzel/gdoc-sync/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
